# AutoDash.OpenAuto

./: .gitignore  .gitmodules  CMakeLists.txt  OpenAutoModule.pro  README.md  build.sh
cmake_modules/: Findaasdk.cmake  Findopenauto.cmake
include/: AndroidAutoInterface.hpp  OpenAutoFrame.hpp  OpenAutoModule.hpp  OpenAutoWorker.hpp
include/widget/: OpenAutoWidget.hpp
libs/: QtApng.patch
resources/: OpenAuto_resources.qrc  resources.qrc
resources/animated/: pulsing-circles.apng
source/: AndroidAutoInterface.cpp  OpenAutoFrame.cpp  OpenAutoModule.cpp  OpenAutoWorker.cpp
source/widget/: OpenAutoWidget.cpp
